src/objects/Lead.object
<CustomObject>


    <businessProcesses>
        <fullName>QVM Events</fullName>
        <description>Status related to Events</description>
        <isActive>true</isActive>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>License offer Rejected</fullName>
        </values>
        <values>
            <fullName>License offer accepted - QVM Trader</fullName>
        </values>
        <values>
            <fullName>License offer sent</fullName>
        </values>
        <values>
            <fullName>New Application</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Second Offer</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unsuccessful</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>QVM Property Management</fullName>
        <description>Status related to Property Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>New Application</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Clarification</fullName>
        </values>
        <values>
            <fullName>Pending receipt of Disclosure</fullName>
        </values>
        <values>
            <fullName>Pending receipt of licence%2Flease</fullName>
        </values>
        <values>
            <fullName>Pending receipt of plans%2FWRF</fullName>
        </values>
        <values>
            <fullName>Prepare Licence%2FLease</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reject</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>QVM Retail Tenancy</fullName>
        <description>Status related to Retail Tenancy</description>
        <isActive>true</isActive>
        <values>
            <fullName>Account Set Up</fullName>
        </values>
        <values>
            <fullName>Advise of tenancy and commercials</fullName>
        </values>
        <values>
            <fullName>If no vacancy%2C can convert to stall</fullName>
        </values>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>Letter of Offer</fullName>
        </values>
        <values>
            <fullName>New Application</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Response%28If rejected%2C close EOI%29</fullName>
        </values>
        <values>
            <fullName>Pending Signed Paperwork</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reject</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ABN__c</fullName>
        <inlineHelpText>enter NA if no ABN</inlineHelpText>
        <label>ABN (enter NA if no ABN)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Of_Gas_Bottles__c</fullName>
        <inlineHelpText>Please include the amount of gas bottles you intend to use*</inlineHelpText>
        <label>Amount Of Gas Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>MerchandiseStall</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FoodTrading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetailTenancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FruitAndVegetableTrading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModularRetailUnit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NightMarketSpecialityStalls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NightMarketFoodVendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpecialEvents</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Permitted_Use__c</fullName>
        <label>Approved Permitted Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Experience__c</fullName>
        <inlineHelpText>Please detail your experience in running a business*</inlineHelpText>
        <label>Business Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignEndDate__c</fullName>
        <formula>IF( ISBLANK(TEXT( Campaign__r.EndDate )) , null,  
MID(TEXT( Campaign__r.EndDate ), 9, 2)&amp;&quot;/&quot;&amp; MID(TEXT( Campaign__r.EndDate ), 6, 2)&amp;&quot;/&quot;&amp;LEFT( TEXT( Campaign__r.EndDate ) , 4))</formula>
        <label>CampaignEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <formula>Campaign__r.Name</formula>
        <label>CampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Terms__c</fullName>
        <label>Commercial Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diatary_Options__c</fullName>
        <inlineHelpText>Please provide vegetarian, gluten-free and Halal options</inlineHelpText>
        <label>Diatary Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electrial_Equipment__c</fullName>
        <inlineHelpText>Please itemise the electrical equipment used at each stall (including electrical draw) – eg: 3 X electric rice cooker 2 X lights etc.*</inlineHelpText>
        <label>Electrial Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Reference1__c</fullName>
        <label>Email Reference 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Reference2__c</fullName>
        <label>Email Reference 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entertainment_Details__c</fullName>
        <inlineHelpText>What entertainment (if any) will you provide at the event? Provide details, including times*</inlineHelpText>
        <label>Entertainment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Benefits__c</fullName>
        <inlineHelpText>What benefits will your proposed event bring to the Queen Victoria Market? How will you ensure that these benefits occur?*</inlineHelpText>
        <label>Event Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Concept__c</fullName>
        <inlineHelpText>Why do you think your concept is suited to the Queen Victoria Market?*</inlineHelpText>
        <label>Event Concept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <inlineHelpText>How do you intend marketing / advertising your event? Detail your marketing program including any paid advertising you will be undertaking. What is your target audience, and how do you intend to get them to your event?*</inlineHelpText>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Organise__c</fullName>
        <inlineHelpText>Will you be acting as the nominated Event Organiser or will you be engaging the services of a third party? If so, please provide their details*</inlineHelpText>
        <label>Event Organise/Third Party</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Theme__c</fullName>
        <inlineHelpText>What is the purpose or theme of the event?*</inlineHelpText>
        <label>Event Theme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName_Referece1__c</fullName>
        <description>First Name of First Reference Person.</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName_Referece2__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fit_out__c</fullName>
        <label>Fit-out Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Food_Theme__c</fullName>
        <inlineHelpText>Outline your food theme i.e cultural/historical background/etc*</inlineHelpText>
        <label>Food Theme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goods_And_Services__c</fullName>
        <inlineHelpText>Provde a brief description of goods or services provided at each stall*</inlineHelpText>
        <label>Goods And Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram_Handle__c</fullName>
        <label>Instagram Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName_Reference1__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName_Reference2__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOppRecordTypeId__c</fullName>
        <label>LeadOppRecordTypeId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The main stall in question for the lead</inlineHelpText>
        <label>Lease Allocation</label>
        <referenceTo>Stall__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Menu_and_Price__c</fullName>
        <inlineHelpText>Provide your proposed menu including prices. (Only one item may exceed $12)*</inlineHelpText>
        <label>Menu and Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Of_Stalls__c</fullName>
        <inlineHelpText>Please outline the number of stalls you intend to have for take-away and merchandise stalls (Maximum of 30 3x3 stalls)</inlineHelpText>
        <label>No Of Stalls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nominated_Event_Organiser_Email__c</fullName>
        <label>Nominated Event Organiser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nominated_Event_Organiser_FirstName__c</fullName>
        <description>Nominated Event Organiser or  third party name</description>
        <label>Nominated Event Organiser FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Event_Organiser_LastName__c</fullName>
        <label>Nominated Event Organiser LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Event_Organiser_Phone__c</fullName>
        <label>Nominated Event Organiser Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Category__c</fullName>
        <inlineHelpText>Please specify &quot;other category&quot; below.</inlineHelpText>
        <label>Other Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cooking_Methods__c</fullName>
        <inlineHelpText>Do you use charcoal or any other smoke generating cooking methods? Please describe in detail*</inlineHelpText>
        <label>Other Cooking Methods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Equipments__c</fullName>
        <inlineHelpText>Please itemise the electrical equipment with amps/watts used in your operation.*</inlineHelpText>
        <label>Other Equipments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Product_Made_Place__c</fullName>
        <inlineHelpText>Please describe &quot;other&quot; below</inlineHelpText>
        <label>Other Product Made Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patrons_experience__c</fullName>
        <inlineHelpText>How will you ensure that your patrons experience the entire Market?*</inlineHelpText>
        <label>Patrons experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_Of_Ingrediance__c</fullName>
        <inlineHelpText>What percentage of your ingredients are sourced from the Queen Victoria Market?*</inlineHelpText>
        <label>Percentage of Ingredients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Permanent_or_Casual__c</fullName>
        <label>Permanent Stall(14 wks) or Casual</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permitted_Use__c</fullName>
        <label>Permitted Use</label>
        <picklist>
            <picklistValues>
                <fullName>Apparel</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Artists-Self Designed and Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botantical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homewares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock/Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials/Craft Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care/Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Souvenirs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_of_Reference1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_of_Reference2__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_Company_Reference1__c</fullName>
        <label>Position&amp;Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Company_Reference2__c</fullName>
        <label>Position&amp;Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductMadePlace__c</fullName>
        <inlineHelpText>Is your product locally made in Melbourne, Victoria or Australia?*</inlineHelpText>
        <label>ProductMadePlace</label>
        <picklist>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <inlineHelpText>If your product locally sourced, self designed and made, fair trade or socially sustainable?Please describe in detail*</inlineHelpText>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Distribution__c</fullName>
        <description>Is your product locally sourced, self designed and made, fair trade or socially sustainable?</description>
        <inlineHelpText>Where is your product currently distributed?*</inlineHelpText>
        <label>Product Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Own Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Retail Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Price_Range__c</fullName>
        <label>Product Price Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Date_Duration__c</fullName>
        <inlineHelpText>What is the proposed date and duration of your event?*</inlineHelpText>
        <label>Proposed Date &amp; Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Of_Ingrediance__c</fullName>
        <inlineHelpText>Do you and do you plan to source ingredients from the Queen Victoria Market?*</inlineHelpText>
        <label>Source Of Ingredients</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Details__c</fullName>
        <inlineHelpText>Will you be seeking sponsorship for your event from outside parties? If so provide details of the sponsors including proposed sponsorship arrangements.*</inlineHelpText>
        <label>Sponsorship Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stall_Category__c</fullName>
        <label>Stall Category</label>
        <picklist>
            <picklistValues>
                <fullName>Artisan Wares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flowers &amp; Garden Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homewares &amp; Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets &amp; Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Souvenirs &amp; Specialty Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology &amp; Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys &amp; Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stall_Holder_Selection_Process__c</fullName>
        <inlineHelpText>Briefly describe your stall holder selection process – including selection criteria, licensing arrangements and process for ensuring legal compliance.*</inlineHelpText>
        <label>Stall Holder Selection Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stall_Or_Product_Concept__c</fullName>
        <inlineHelpText>Describe your stall concept and your product or brand story*</inlineHelpText>
        <label>Stall Or Product Concept</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trading_Days__c</fullName>
        <inlineHelpText>Please indicate your prefered trading days below*</inlineHelpText>
        <label>Trading Days</label>
        <picklist>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trading_Places__c</fullName>
        <inlineHelpText>Where else do you currently operate?*</inlineHelpText>
        <label>Trading Places</label>
        <picklist>
            <picklistValues>
                <fullName>Own Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Events/Festivals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Markets</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Selling_Point__c</fullName>
        <inlineHelpText>What is your unique selling point and how would it add value to the Queen Victoria Market offering?*</inlineHelpText>
        <label>Unique Selling Point</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Stall_Location_Preference__c</fullName>
        <globalPicklist>Preferred_Stall_Locations</globalPicklist>
        <label>1st Stall Location Preference</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_Stall_Location_Preference__c</fullName>
        <globalPicklist>Preferred_Stall_Locations</globalPicklist>
        <label>2nd Stall Location Preference</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Stall_Location_Preference__c</fullName>
        <globalPicklist>Preferred_Stall_Locations</globalPicklist>
        <label>3rd Stall Location Preference</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>free_trade_initiatives__c</fullName>
        <label>Free trade initiatives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>Application_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ABN__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Events_Department_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Events Department Queue</label>
        <queue>Events_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facilities_Department_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Facilities Department Queue</label>
        <queue>Facilities_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Food_Fruit_and_Veg_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Food Fruit and Veg</label>
        <queue>Food_Fruit_and_Veg</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Merchandise_Stalls_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Merchandise Stalls</label>
        <queue>Merchandise_Stalls</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Property_Department_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Licence Department Queue</label>
        <queue>Property_Department_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retail_Tenancy_and_Modular_Units_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail Tenancy and Modular Units</label>
        <queue>Retail_Tenancy_and_Modular_Units</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>QVM_Events</fullName>
        <active>true</active>
        <businessProcess>QVM Events</businessProcess>
        <description>Used to capture Event leads</description>
        <label>QVM Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>QVM_Property_Management</fullName>
        <active>true</active>
        <businessProcess>QVM Property Management</businessProcess>
        <description>Used to record Property Management leads</description>
        <label>QVM Property Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>QVM_Retail_Tenancy</fullName>
        <active>false</active>
        <businessProcess>QVM Retail Tenancy</businessProcess>
        <description>Retail Tenancy</description>
        <label>QVM Retail Tenancy</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Other_Category_Field_Filled</fullName>
        <active>true</active>
        <description>Check Other Category Field Value filled if user select Stall Category as Other.</description>
        <errorConditionFormula>AND( ISBLANK(Other_Category__c ),  INCLUDES( Stall_Category__c , &quot;Other&quot;))</errorConditionFormula>
        <errorDisplayField>Other_Category__c</errorDisplayField>
        <errorMessage>Please enter value in Other Category Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_ABN</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
TRIM(ABN__c) == &apos;NA&apos;,
LEN(TRIM(ABN__c)) == 11
)
)</errorConditionFormula>
        <errorDisplayField>ABN__c</errorDisplayField>
        <errorMessage>Please enter a valid ABN</errorMessage>
    </validationRules>
</CustomObject>